syntax = "proto3";
package proto;
option java_multiple_files = true;
option java_outer_classname = "Auth";
option java_package = "io.grpc.builtin.Auth";

message AuthRequest {
  string access_token = 1;
}
message AuthResponse {
  string message = 1;
  UserInfo user_info = 2;
}
message UserInfo {
  string user_id = 1;
  Role user_role = 2;
}
enum Role {
  USER = 0;
  ADMIN = 1;
}
service AuthService {
  rpc verify(AuthRequest) returns (AuthResponse);
}